:sparkles: feat: pass param to function