@@ -2,6 +2,7 @@ package lang.c.parse;
 
 import java.io.PrintStream;
 import java.util.ArrayDeque;
+import java.util.ArrayList;
 
 import lang.*;
 import lang.c.*;
@@ -9,10 +10,12 @@ import lang.c.*;
 public class Call extends CParseRule {
 	// call            ::= LPAR RPAR
 	CToken num;
-	ArrayDeque<CParseRule> expressions;
+	ArrayList<CParseRule> expressions;
+	FunctionInfo functionInfo;
 
-	public Call(CParseContext pcx) {
-		expressions = new ArrayDeque<CParseRule>();
+	public Call(CParseContext pcx, FunctionInfo functionInfo) {
+		expressions = new ArrayList<CParseRule>();
+		this.functionInfo = functionInfo;
 	}
 
 	public static boolean isFirst(CToken tk) {
@@ -24,8 +27,8 @@ public class Call extends CParseRule {
 		CToken tk = ct.getNextToken(pcx); // (を読み飛ばす
 
 		if (Expression.isFirst(tk)) {
-			expressions.addLast(new Expression(pcx));
-			expressions.getLast().parse(pcx);
+			expressions.add(new Expression(pcx));
+			expressions.get(expressions.size()-1).parse(pcx);
 			tk = ct.getCurrentToken(pcx);
 			while (tk.getType() == CToken.TK_COMMA) {
 				tk = ct.getNextToken(pcx); // ,を読み飛ばす
@@ -33,8 +36,8 @@ public class Call extends CParseRule {
 					pcx.recoverableError(tk.toExplainString() + ",の後ろには引数が必要です");
 					continue;
 				}
-				expressions.addLast(new Expression(pcx));
-				expressions.getLast().parse(pcx);
+				expressions.add(new Expression(pcx));
+				expressions.get(expressions.size()-1).parse(pcx);
 				tk = ct.getCurrentToken(pcx);
 			}
 		}
@@ -45,8 +48,35 @@ public class Call extends CParseRule {
 	}
 
 	public void semanticCheck(CParseContext pcx) throws FatalErrorException {
+		int argSize = expressions.size();
+		if (argSize != functionInfo.getParamSize()) {
+			String msg = String.format("引数の数が一致しません<定義:%d, 使用数:%d>", functionInfo.getParamSize(), argSize);
+			pcx.warning(msg);
+		}
+
+		for (int i = 0; i < argSize; i++) {
+			expressions.get(i).semanticCheck(pcx);
+			CType argType = expressions.get(i).getCType();
+			ArrayList<ParameterInfo> paramList = functionInfo.getParamInfoList();
+			CType paramType = paramList.get(i).getType();
+			String name = paramList.get(i).getName();
+
+			if (argType.getType() != paramType.getType()) {
+				String msg = String.format("Call: 引数%sの型が一致しません<定義:%s, 使用:%s>",
+					name, paramType.toString(), argType.toString());
+				pcx.warning(msg);
+			}
+		}
+
 	}
 
 	public void codeGen(CParseContext pcx) throws FatalErrorException {
+		PrintStream o = pcx.getIOContext().getOutStream();
+		o.println(";;; Call starts");
+		int argSize = expressions.size();
+		for (int i = argSize-1; i >= 0; i--) {
+			expressions.get(i).codeGen(pcx);
+		}
+		o.println(";;; Call completes");
 	}
 }
